# Anthrax

./: .gitmodules  CMakeLists.txt  README.md  klist
common/: CMakeLists.txt
common/include/: freelist.hpp  quaternion.hpp  ringbuffer.hpp  timer.hpp  tools.hpp
common/src/: freelist.cpp  quaternion.cpp  timer.cpp  tools.cpp
include/: '  anthrax.hpp  buffer.hpp  camera.hpp  character.hpp  compute_shader_manager.hpp  descriptor.hpp  device.hpp  graphicsPipeline.hpp  graphics_pipeline.hpp  idmap.hpp  image.hpp  intfloat.hpp  material.hpp  octree.hpp  render_pass.hpp  shader.hpp  swap_chain.hpp  text.hpp  voxfile_parser.hpp  vulkan_manager.hpp  vulkanmanager.hpp  world.hpp
main/: CMakeLists.txt
main/include/: anthrax.hpp  flat_octree.hpp  intfloat.hpp  octree.hpp  ringbuffer.hpp  text.hpp  world.hpp
main/src/: anthrax.cpp  descriptor.cpp  flat_octree.cpp  intfloat.cpp  material.cpp  octree.cpp  shader.cpp  vulkan_manager.cpp  world.cpp
model_handler/: CMakeLists.txt
model_handler/include/: glb_handler.hpp  gltf_handler.hpp  mesh.hpp  model.hpp  octree.hpp  recursive_octree.hpp  transform.hpp  vox_handler.hpp  voxelizer.hpp
model_handler/src/: glb_handler.cpp  gltf_handler.cpp  mesh.cpp  model.cpp  octree.cpp  recursive_octree.cpp  transform.cpp  vox_handler.cpp  voxelizer.cpp
shaders/: main.comp  main.frag  main.vert  main_pass_shaderf.glsl  main_pass_shaderv.glsl  model_rotation.comp  octree_defrag.comp  octree_defrag.comp.old  octree_rebuild.comp  screen_pass_shaderf.glsl  screen_pass_shaderv.glsl  text_pass_shaderf.glsl
shaders/old/: main_pass_shaderv.glsl  screen_pass_shaderv.glsl  text_pass_shaderv.glsl
shaders/raymarch/: condense_output.comp  draw.comp  draw_z_buffer.comp  generate_initial_rays.comp  raymarch.comp  raymarch.comp.old
src/: anthrax.cpp  buffer.cpp  compute_shader_manager.cpp  descriptor.cpp  device.cpp  graphicsPipeline.cpp  graphics_pipeline.cpp  image.cpp  input_handler.cpp  intfloat.cpp  octree.cpp  render_pass.cpp  shader.cpp  voxfile_parser.cpp  vulkan_manager.cpp  vulkanmanager.cpp  world.cpp
tools/: tools.hpp
vulkan_handler/: CMakeLists.txt
vulkan_handler/include/: buffer.hpp  compute_shader_manager.hpp  descriptor.hpp  device.hpp  graphics_pipeline.hpp  image.hpp  input_handler.hpp  render_pass.hpp  shader.hpp  vulkan_manager.hpp
vulkan_handler/src/: buffer.cpp  compute_shader_manager.cpp  descriptor.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  input_handler.cpp  render_pass.cpp  swap_chain.cpp  vulkan_manager.cpp
